@@ -88,11 +88,11 @@ else {
                         $location->description = str_replace(array("\r\n","\n","\r"), "<br>", $location->description );
 
                         $html[] = "map.addMarker({";
-                        $html[] = " title: '$location->name',";
+                        $html[] = " title: \"$location->name\",";
                         $html[] = " lat: '$location->lat',";
                         $html[] = " lng: '$location->long',";
                         $html[] = " infoWindow: {";
-                        $html[] = "    content: '<h5><a href=\'".create_link("tools", "locations", $location->id)."\'>$location->name</a></h5>$location->description'";
+                        $html[] = "    content: '<h5><a href=\'".create_link("tools", "locations", $location->id)."\'>". addslashes($location->name) ."</a></h5>$location->description'";
                         $html[] = "}";
                         $html[] = "});";
                     }
